# Applied-ML-LLM-Exercise

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: shopping_queries_dataset_exercise.csv
llm_prompt/: classification_prompt.txt  query_modification_prompt.txt
utils/: data_client.py  llm_client.py  model.py  openai_client.py
