[tool.poetry]
name = "applied-ml-llm-exercise"
version = "0.1.0"
description = "Applied ML/LLM Exercise for query classification and reformulation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
pyarrow = "^14.0.0"
openai = "^1.0.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"
streamlit = "^1.28.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
